subrscribe now section added

--- a/index.html
+++ b/index.html
@@ -233,6 +233,18 @@
                     </div>
                 </div>
             </div>
+            <!-- subscribe  -->
+            <section>
+                <div class="row my-5 bg-info">
+                    <div class="col text-center">
+                        <h2>LET'S STAY IN TOUCH</h2>
+                        <p>Get updates on sales, specials and more</p>
+                        <input type="text" name="" id="">
+                        <br>
+                        <button class="btn btn-primary">Subscribe Now!</button>
+                    </div>
+                </div>
+            </section>
         </div>
 
 
